--- a/Notification Service Extension/fa.lproj/Localizable.strings
+++ b/Notification Service Extension/fa.lproj/Localizable.strings
@@ -64,6 +64,12 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "به روز رسانی";
 
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "برای فعال‌سازی ضبط صدا روی تنظیمات کلیک کنید و میکروفون را فعال کنید";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "خطا در دسترسی به میکروفون";
+
 /* Title for generic delete button. */
 "Delete" = "حذف";
 
