--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -157,8 +157,8 @@
 /* Title for a popup alerting about camera initialization error. */
 "camera.init.error.title" = "خطا در شروع";
 
-/* Text shown at the top of the chat screen for contacts not in the user's address book that say the contact can be added to the address book */
-"chat.add.to.contacts.book.label" = "برای دیدن پست‌های %@، شماره تلفنش را وارد لیست مخاطب‌ها کنید. برای این کار کلیک کنید";
+/* No comment provided by engineer. */
+"Cancel" = "لغو";
 
 /* Text shown at the top of the chat screen informing the user that the contact is blocked */
 "chat.blocked.contact.label" = "مخاطب مسدود شد، برای رفع مسدودیت کلیک کنید";
@@ -310,6 +310,24 @@
 /* Warning text displayed in Comments when post wasn't available. */
 "comments.post.loading.failed" = "خطا در بارگذاری پست. لطفاً بعداً‌ دوباره امتحان کنید.";
 
+/* Accessibility label for add images button */
+"composer.audio.a11y.addImages" = "اضافه کردن عکس";
+
+/* Accessibility label for sharing a post */
+"composer.audio.a11y.shareRecording" = "به اشتراک گذاشتن";
+
+/* Accessibility label for starting an audio recording */
+"composer.audio.a11y.startRecording" = "شروع به ضبط کردن";
+
+/* Accessibility label for stopping an audio recording */
+"composer.audio.a11y.stopRecording" = "توقف ضبط کرن";
+
+/* Instructions for audio post composer */
+"composer.audio.instructions" = "کلیک برای ضبط کردن";
+
+/* Title for audio post composer */
+"composer.audio.title" = "پست صوتی جدید";
+
 /* Alert message in composer when a video is too long */
 "composer.max.video.length.message" = "لطفاً‌ ویدیوی دیگری انتخاب کنید یا گزینه ویرایش را انتخاب کنید.";
 
@@ -390,6 +408,9 @@
 
 /* VoiceOver label for text post button in floating compose post menu in Home view. */
 "fab.accessibility.text" = "متن";
+
+/* VoiceOver label for voice note button in floating compose post menu in Home view. */
+"fab.accessibility.voice" = "پیام صوتی";
 
 /* Shown while content is being retracted from feed */
 "feed.deleting" = "در حال پاک کردن...";
@@ -1162,11 +1183,17 @@
 /* Action that will occur when users delete their account */
 "settings.account.delete.bullet3" = "حذف تاریخچه پیام‌هایتان از این تلفن";
 
+/* Button to continue to the next step of deleting account after warning */
+"settings.account.delete.continue.title" = "ادامه";
+
 /* Label telling the user that their account has been deleted */
 "settings.account.delete.deleted" = "حذف حساب کاربری";
 
 /* Alert telling user that their account could not be deleted, and that it's likely due to their phone number */
 "settings.account.delete.error" = "خطا در حذف حساب کاربری. لطفاً مطمئن شوید شماره تلفن درست است.";
+
+/* Text field label asking for feedback before deleting account */
+"settings.account.delete.feedback.prompt" = "بازخوردی برای تیم هالواپ دارید؟ (اختیاری)";
 
 /* Label above list of things that will happen if they delete their account */
 "settings.account.delete.header" = "حذف حساب کاربری شما به معنای این است که:";
@@ -1174,8 +1201,11 @@
 /* Alert message telling the user that account deletion is irreversible */
 "settings.account.delete.irreversible.label" = "این عمل برگشت ناپذیر است";
 
-/* Text field placeholder telling the user that their phone number should go into the field */
-"settings.account.delete.phone.number" = "شماره تلفن شما";
+/* Text field placeholder for collecting feedback before deleing account */
+"settings.account.delete.phone.number.placeholder" = "بازخورد";
+
+/* Text field label for account deletion phone number */
+"settings.account.delete.phone.number.prompt" = "برای تأیید شماره تلفن خود را وارد کنید";
 
 /* String that's displayed when a spinner is not available to indicate that the view is waiting for a response from the server */
 "settings.account.delete.spinner.replacement" = "در انتظار پاسخ از سرور";
@@ -1350,6 +1380,9 @@
 
 /* Text for action label that lets the user accept messages from unknown contacts */
 "unknown.contact.accept.to.message" = "برای پاسخ دادن پیام را قبول کنید";
+
+/* Informational label that's shown in the banner for an unknown contact when they message the user for the first time */
+"unknown.contact.not.in.contact.book" = "این فرستنده در لیست مخاطبین شما نیست.";
 
 /* Button to confirm blocking user via profile page */
 "user.block" = "مسدود کردن";
