--- a/Notification Service Extension/es.lproj/Localizable.strings
+++ b/Notification Service Extension/es.lproj/Localizable.strings
@@ -64,6 +64,12 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Actualizar";
 
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Para capacitar la grabación de audio, por favor ve a Configuración y enciende el micrófono";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Incapaz de acceder al micrófono";
+
 /* Title for generic delete button. */
 "Delete" = "Eliminar";
 
